--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Diaries -- Juvenile fiction'
 - !lcsh 'Italy -- Juvenile fiction'
+- GITenberg
 title: 'Cuore (Heart): An Italian Schoolboy''s Journal'
 url: http://www.gutenberg.org/ebooks/28961
